--- a/style.css
+++ b/style.css
@@ -104,3 +104,11 @@ oppure i caratteri ∧ (&and;) e ∨ (&or;)
   left: 50%;
   transform: translate(-50%) rotate(135deg);
 }
+
+.d-none {
+  display: none;
+}
+
+.active {
+  display: block;
+}
